# DataJournalisme_Methode_Quanti_Introduction_Python

./: AUTHORS  AUTHORS.md  INSTALLATION.md  M1_Datajournalisme_Cours_3.ipynb  README.md  pyproject.toml
Data/: vico2020.csv
Notebooks/: M1_Datajournalisme_Cours1.ipynb  M1_Datajournalisme_Cours2.ipynb  M1_Datajournalisme_Cours_1.ipynb  M1_Datajournalisme_Cours_1b_mk_2024.ipynb  M1_Datajournalisme_Cours_1c_commandes_2026.ipynb  M1_Datajournalisme_Cours_2.ipynb  M1_Datajournalisme_Cours_2b_commande_2026.ipynb  M1_Datajournalisme_Cours_3.ipynb
